--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 /* index.css */
 /* 1행========================북극곰 후원 안내 */
-#wrap {}
+#wrap {} /* 기본값 유지를 위해 작성하지 않음. 기본값 -> 너비는 부모의 100%, 높이는 내용만큼 */
 #wrap .intro {
     height:100vh; 
     background:url(../images/bg1.png) no-repeat center / cover;
@@ -55,6 +55,60 @@
     border-radius:30px;
 }
 /* 2행========================퀴즈 */
+#wrap .quiz {
+    background:url(../images/quiz_bg.png) center / cover;
+    padding:150px 0;
+}
+#wrap .quiz .container {
+    width:1250px; margin:0 auto;
+    border:1px solid aqua;
+    display:grid; /* 왼쪽퀴즈, 오른쪽참여현황 정렬grid */
+    grid-template-columns:1fr 1fr;
+}
+#wrap .quiz .container #left_quiz {}
+#wrap .quiz .container #left_quiz * {color:#fff;}
+#wrap .quiz .container #left_quiz h2 {
+    text-align:center;
+    font-size:3.438rem;
+    line-height:1.2;
+    letter-spacing:-1;
+    margin:0 0 38px;
+}
+#wrap .quiz .container #left_quiz h3 {
+    font-size:1.25rem;
+    line-height:1.7;
+}
+#wrap .quiz .container #left_quiz .list {
+    display:grid;
+    grid-template-rows:repeat(4, 34px);
+    margin:8px 0 38px;
+}
+#wrap .quiz .container #left_quiz .list label {}
+#wrap .quiz .container #left_quiz .list label input[value*=q] {display:none;}
+#wrap .quiz .container #left_quiz .list label input[value*=q]:checked + span {
+    background-image:url(../images/chk_on.png);
+}
+#wrap .quiz .container #left_quiz .list label span {
+    background-image:url(../images/chk_off.png);
+    display:block;
+    /* 배경반복 + 왼쪽여백 + 왼쪽여백 + 행간 설정 */
+    background-repeat:no-repeat;
+    line-height:34px;
+    padding-left:48px;
+    background-position-y:5px;
+}
+#wrap .quiz .container #left_quiz #answer_btn {
+    background-color:#050505; 
+    width:100%; height:54px; border-radius:50px;
+}
+#wrap .quiz .container .right {text-align:right;}
+#wrap .quiz .container .right p {}
+#wrap .quiz .container .right p:nth-child(1) {}
+#wrap .quiz .container .right p:nth-child(1) img {}
+#wrap .quiz .container .right p:nth-child(2) {
+    color:#fff;
+    margin-top:20px;
+}
 /* 3행========================새끼북극곰 이야기 */
 /* 4행========================빙하면적감소 */
 /* 5행========================인류재앙 */
