--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,19 +5,38 @@
     /* ===========1행 intro */
     #wrap .intro {padding:0 80px;}
     #wrap .intro .container {width:100%;} /* max-width때문에 width 안 써도 됨. max-width:1250px;이하는 전부 %로 처리 */
-    #wrap .intro .container h1:nth-child(2) {font-size:3.125rem;}
-    #wrap .intro .container .sponsor_btn {width:270px; line-height:62px; font-size:1.375rem;}
-    #wrap .intro .container .sponsor_question {width:333px; height:54px; font-size:1.25rem;}
+    #wrap .intro .container h1:nth-child(2) {font-size:1.875rem; font-weight:700;}
+    #wrap .intro .container .sponsor_btn {
+        width:270px; line-height:62px; font-size:1.375rem; font-weight:700;
+    }
+    #wrap .intro .container .sponsor_question {
+        width:333px; height:54px; font-size:1.25rem; padding-top:10px;
+    }
     /* ============2행 quiz */
     #wrap .quiz {padding:150px 80px;}
-    /* 3행 video */
+    /* ================3행 video */
     #wrap .ad {padding:200px 80px;}
     #wrap .ad .container h2 {font-size:2.5rem;}
+    #wrap .ad .container iframe {
+        height:400px;
+    }
+    #wrap .ad .container .sponsor_btn {
+        font-size:1.375rem; 
+        width:270px;
+    }
+    /* --------------------------5행 인류재앙 */
+    #wrap .disaster {padding:200px 80px;}
+    #wrap .disaster .container h2 {font-size:2.5rem;}
 }
 /* Mobile 849~320 */
 @media screen and (max-width:849px){
     #wrap .intro {padding:0 15px;}
     #wrap .intro .container h1:nth-child(2) {font-size:1.25rem;}
+    #wrap .intro .container .sponsor_btn {font-size:1.375rem;}
+    #wrap .intro .container .sponsor_question {
+        float:none; display:inline-block;
+        font-size:1.25rem;
+    }
     /* ======================2행 quiz */
     #wrap .quiz {padding:70px 15px;}
     #wrap .quiz .container {grid-template-columns:1fr;}
@@ -27,4 +46,13 @@
     #wrap .ad {padding:50px 15px;}
     #wrap .ad .container iframe {height:400px;}
     #wrap .ad .container h2 {font-size:1.375rem;}
+    /* 5행 */
+    #wrap .disaster {padding:70px 15px;}
+    #wrap .disaster .container h2 {font-size:1.375rem;}
+    #wrap .disaster .container > p {font-size:0.813rem; margin:40px 0;}
+    #wrap .disaster .container .list {flex-flow:column nowrap;}
+    #wrap .disaster .container .list li .bg {height:150px;}
+    #wrap .disaster .container .list li > p {height:max-content; font-size:0.813rem;}
+    #wrap .disaster .container .list li .bg h3 {font-size:1.375rem;}
+    #wrap .disaster .container .list li .bg p {font-size:1rem;}
 }
